--- a/index/index.html
+++ b/index/index.html
@@ -5,13 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LandingPage</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="img/intech_Logo.png" alt="Intech">
-        </div>             
+        <img src="/img/intech_Logo.png" alt="logo" class="logo">
     </header>
 
 
