--- a/index/index.html
+++ b/index/index.html
@@ -5,17 +5,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LandingPage</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
     <header>
-        <img src="/img/intech_Logo.png" alt="logo" class="logo">
+        <img src="/img/logo.svg" alt="logo" class="logo">
     </header>
 
 
+    <main>
+        <section>
+            <div>
+                <h1>Por que devemos combater o aquecimento global?</h1>
+                <h5>você sabe quais são os impactos que a mudança climática causam no cotidiano? Ele pode ser bem mais prejudicial do que a maioria das pessoas pensam!</h5>
+                <button>-->Assista ao video</button>
+            </div>
+            <img src="/img/Antartica.svg" alt="imagemAntartica">
+            <img src="/img/Play.svg" alt="imagemPlay">
+        </section>
+        <section>
+            <div>
+                <img src="/img/icone1.svg" alt="icone1">
+                <h3>Aquecimento global</h3>
+                <h5>Aquecimento global é a intensificação do chamado efeito estufa. Esse é um efeito natural e importante para a Terra, pois permite que o planeta se mantenha aquecido, no entanto, a intensificação desse efeito é prejudicial.</h5>
+            </div>
+            <div>
+                <img src="/img/icone2.svg" alt="icone2">
+                <h3>Mudanças Climáticas</h3>
+                <h5>Referem-se a mudanças no clima que ocorrem em todo o planeta e podem ser notadas em todo o globo. Gerando extinção de várias espécies, derretimento das geleiras e aumento do nível do mar como consequências.</h5>
+            </div>
+            <div>
+                <img src="/img/icone3.svg" alt="icone3">
+                <h3>O que causa?</h3>
+                <h5>De forma resumida, ele é provocado pelas intervenções do homem na natureza para a exploração de seus recursos, assim, aumentando o efeito estufa, que muda o clima do planeta.</h5>
+            </div>
+        </section>
+        <section>
+            <h2>Motivações para esse trabalho</h2>
+            <div>
+                <img src="/img/Ondas.svg" alt="Ondas">
+                <h3>Lorem</h3>
+                <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</h5>
+            </div>
+            <div>
+                <h3>Lorem</h3>
+                <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</h5>
+                <img src="/img/borboleta.svg" alt="borboleta">
+            </div>
+        </section>
+    </main>
 
 
-
+    <footer>
+        <img src="/img/logo.svg" alt="logoIntech">
+        <img src="/img/Linkedin1.svg" alt="linkedin1">
+        <img src="/img/linkedin2.svg" alt="linkedin2">
+        <img src="/img/linkedin3.svg" alt="linkedin3">
+        <img src="/img/linkedin4.svg" alt="linkedin4">
+        <a href="https://www.linkedin.com/in/emely-tavares-3575ba24a/">Emely Feitosa</a>
+        <a href="https://www.linkedin.com/in/mariana-silva-paula/">Mariana Paula</a>
+        <a href="https://www.linkedin.com/in/matheus-macedo-santos-2a8106194/">Matheus Santos</a>
+        <a href="https://www.linkedin.com/in/samuel-lucas-241a77210/">Samuel Lucas</a>
+    </footer>
 
 
 
