--- a/index/index.html
+++ b/index/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LandingPage</title>
     <link rel="stylesheet" href="/styles/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
+
+<body class="body">
     <header>
         <img src="/img/logo.svg" alt="logo" class="logo">
     </header>
@@ -17,40 +21,69 @@
         <section>
             <div>
                 <h1 class="title_principal">Por que devemos combater o <br>
-                     aquecimento global?</h1>
-                <p class="text">você sabe quais são os impactos que a mudança climática causam no cotidiano? Ele pode ser bem mais prejudicial do que a maioria das pessoas pensam!</p>
+                    aquecimento global?</h1>
+                <p class="text">você sabe quais são os impactos que a mudança climática causam no cotidiano? Ele pode
+                    ser bem mais prejudicial do que a maioria das pessoas pensam!</p>
                 <button>-->Assista ao video</button>
             </div>
             <img src="/img/Antartica.svg" alt="imagemAntartica">
             <img src="/img/Play.svg" alt="imagemPlay">
         </section>
-        <section>
-            <div>
-                <img src="/img/icone1.svg" alt="icone1">
-                <h3 class="title">Aquecimento global</h3>
-                <p class="text">Aquecimento global é a intensificação do chamado efeito estufa. Esse é um efeito natural e importante para a Terra, pois permite que o planeta se mantenha aquecido, no entanto, a intensificação desse efeito é prejudicial.</p>
-            </div>
-            <div>
-                <img src="/img/icone2.svg" alt="icone2">
-                <h3 class="title">Mudanças Climáticas</h3>
-                <p class="text">Referem-se a mudanças no clima que ocorrem em todo o planeta e podem ser notadas em todo o globo. Gerando extinção de várias espécies, derretimento das geleiras e aumento do nível do mar como consequências.</p>
-            </div>
-            <div>
-                <img src="/img/icone3.svg" alt="icone3">
-                <h3 class="title">O que causa?</h3>
-                <p class="text">De forma resumida, ele é provocado pelas intervenções do homem na natureza para a exploração de seus recursos, assim, aumentando o efeito estufa, que muda o clima do planeta.</p>
+        <section class="settings_down">
+            <div class="mid">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card wow  zoomIn animated">
+                            <img width="60px" src="/img/icone1.svg" alt="Icone Indisponível">
+                            <h4 class="text-center">Aquecimento global</h4>
+                            <p class="text-center">Aquecimento global é a intensificação do chamado efeito estufa. 
+                                Esse é um efeito natural e importante para a Terra, pois permite que o planeta se mantenha aquecido, 
+                                no entanto, a intensificação desse efeito é prejudicial.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card wow  zoomIn animated" style="visibility: visible; animation-name: zoomIn;">
+                            <img width="60px" src="/img/icone2.svg" alt="Icone Indisponível">
+                            <h4 class="text-center">Mudanças Climáticas</h4>
+                            <p class="text-center">Referem-se a mudanças no clima que ocorrem em todo o planeta e podem ser notadas em todo
+                                o globo. Gerando extinção de várias espécies, derretimento das geleiras e aumento do nível do mar
+                                como consequências.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card wow  zoomIn animated">
+                            <img width="60px" src="/img/icone3.svg" alt="Icone Indisponível">
+                            <h4 class="text-center">O que causa?</h4>
+                            <p class="text-center">De forma resumida, ele é provocado pelas intervenções do homem na natureza para a
+                                exploração de seus recursos, assim, aumentando o efeito estufa, que muda o clima do planeta.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
+    </br>
+        
         <section>
             <h2 class="title">Motivações para esse trabalho</h2>
             <div>
                 <img src="/img/Ondas.svg" alt="Ondas">
+                <div>
                 <h3 class="title">Lorem</h3>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia</p>
+                </div>
             </div>
+        '   </div>
             <div>
                 <h3 class="title">Lorem</h3>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia</p>
                 <img src="/img/borboleta.svg" alt="borboleta">
             </div>
         </section>
@@ -68,8 +101,10 @@
         <a href="https://www.linkedin.com/in/matheus-macedo-santos-2a8106194/">Matheus Santos</a>
         <a href="https://www.linkedin.com/in/samuel-lucas-241a77210/">Samuel Lucas</a>
     </footer>
+    </section>
 
 
 
 </body>
+
 </html>
