--- a/index/index.html
+++ b/index/index.html
@@ -11,49 +11,54 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body class="body">
+
+<body>
     <header>
-        <img src="/img/logo.svg" alt="logo" class="logo">
+        <nav class="navbar navbar-dark bg-dark">
+            <div class="container-fluid">
+                <img src="/img/logo.svg" alt="logo" class="logo">
+            </div>
+        </nav>
     </header>
 
-
+<section class="body">
     <main>
         <section>
-            <div>
+            <div class="back"></div>
+            <div class>
                 <h1 class="title_principal">Por que devemos combater o <br>
                     aquecimento global?</h1>
-                <p class="text">você sabe quais são os impactos que a mudança climática causam no cotidiano? Ele pode
-                    ser bem mais prejudicial do que a maioria das pessoas pensam!</p>
-                <button>-->Assista ao video</button>
-            </div>
-            <img src="/img/Antartica.svg" alt="imagemAntartica">
-            <img src="/img/Play.svg" alt="imagemPlay">
-        </section>
+                <p class="text">você sabe quais são os impactos que a mudança climática causam no cotidiano?
+                    Ele pode ser </br> bem mais prejudicial do que a maioria das pessoas pensam!</p>
+                    <div class="video">
+                        <iframe width="840" height="472,5" class="video"  src="https://www.youtube.com/embed/S6Ycuv2lxFY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
+                    </div>
+            </section>
         <section class="settings_down">
             <div class="mid">
                 <div class="row">
-                    <div class="col-md-4">
-                        <div class="card wow  zoomIn animated">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
+                        <div class=" wow  zoomIn animated under">
                             <img width="60px" src="/img/icone1.svg" alt="Icone Indisponível">
-                            <h4 class="text-center">Aquecimento global</h4>
+                            <h3 class="text-center">Aquecimento global</h3>
                             <p class="text-center">Aquecimento global é a intensificação do chamado efeito estufa. 
                                 Esse é um efeito natural e importante para a Terra, pois permite que o planeta se mantenha aquecido, 
                                 no entanto, a intensificação desse efeito é prejudicial.</p>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="card wow  zoomIn animated" style="visibility: visible; animation-name: zoomIn;">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
+                        <div class=" wow  zoomIn animated under" style="visibility: visible; animation-name: zoomIn;">
                             <img width="60px" src="/img/icone2.svg" alt="Icone Indisponível">
-                            <h4 class="text-center">Mudanças Climáticas</h4>
+                            <h3 class="text-center">Mudanças Climáticas</h3>
                             <p class="text-center">Referem-se a mudanças no clima que ocorrem em todo o planeta e podem ser notadas em todo
                                 o globo. Gerando extinção de várias espécies, derretimento das geleiras e aumento do nível do mar
                                 como consequências.</p>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="card wow  zoomIn animated">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
+                        <div class="wow  zoomIn animated under">
                             <img width="60px" src="/img/icone3.svg" alt="Icone Indisponível">
-                            <h4 class="text-center">O que causa?</h4>
+                            <h3 class="text-center">O que causa?</h3>
                             <p class="text-center">De forma resumida, ele é provocado pelas intervenções do homem na natureza para a
                                 exploração de seus recursos, assim, aumentando o efeito estufa, que muda o clima do planeta.</p>
                         </div>
@@ -62,49 +67,52 @@
             </div>
         </section>
     </br>
-        
-        <section>
-            <h2 class="title">Motivações para esse trabalho</h2>
-            <div>
-                <img src="/img/Ondas.svg" alt="Ondas">
-                <div>
-                <h3 class="title">Lorem</h3>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia</p>
-                </div>
+
+    <section class="container"> <!-- essa section contém uma imagem e um texto breve de introdução ao projeto, o impacto social -->
+        <div class=" row space">
+          <div class="col-12 col-lg-6">
+            <img class="image_side" src="/img/inundação.svg">
+          </div>
+          <div class="col-12 col-lg-6 text_sets">
+            <h1 class="marg"><b>Mudança climática</b></h1>
+            <p class="marg">É provável que os países tropicais, tais como Brasil, sejam os principais afetados pelas mudanças.
+                 Segundo relatórios do IPPC, poderão ocorrer inundações, em virtude da intensificação das tempestades,
+                  e períodos longos de estiagem. Desse modo, as consequências do aquecimento global afetam diretamente 
+                  os seres vivos, podendo chegar a um nível tão extremo que seja impossível a 
+                  existência de vida na Terra.</p>
+          </div>
+        </div>
+        <div class=" row">
+            <div class="col-12 col-lg-6 text_sets">
+              <h1 class="marg"><b>Perda de espécies</b></h1>
+              <p class="marg">As mudanças climáticas apresentam riscos à sobrevivência de espécies terrestres e marinhas. 
+                Estes riscos aumentam de acordo com a elevação da temperatura. Incêndios florestais, clima extremo, 
+                pestes e doenças invasivas estão entre as muitas ameaças relacionadas às mudanças climáticas.
+                 Algumas espécies serão capazes de se realocar e sobreviver, mas outras não.</p>
             </div>
-        '   </div>
-            <div>
-                <h3 class="title">Lorem</h3>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia</p>
-                <img src="/img/borboleta.svg" alt="borboleta">
-            </div>
-        </section>
+            <div class="col-12 col-lg-6">
+                <img class="image_side" src="/img/desgelo.svg">
+              </div>
+          </div>
+      </section>
     </main>
+</section>
 
-
-    <footer>
-        <img src="/img/logo.svg" alt="logoIntech">
-        <img src="/img/Linkedin1.svg" alt="linkedin1">
-        <img src="/img/linkedin2.svg" alt="linkedin2">
-        <img src="/img/linkedin3.svg" alt="linkedin3">
-        <img src="/img/linkedin4.svg" alt="linkedin4">
-        <a href="https://www.linkedin.com/in/emely-tavares-3575ba24a/">Emely Feitosa</a>
-        <a href="https://www.linkedin.com/in/mariana-silva-paula/">Mariana Paula</a>
-        <a href="https://www.linkedin.com/in/matheus-macedo-santos-2a8106194/">Matheus Santos</a>
-        <a href="https://www.linkedin.com/in/samuel-lucas-241a77210/">Samuel Lucas</a>
+    <footer class="footer_down bg-dark">
+        <div>
+        <p class="title_footer"><img src="/img/logo.svg" alt="logoIntech"></p>
+        </div>
+        <div>
+        <p class="bord"><img src="/img/Linkedin1.svg" alt="linkedin1">
+             <a href="https://www.linkedin.com/in/emely-tavares-3575ba24a/">Emely Feitosa</a></p>
+        <p class="bord"><img src="/img/linkedin2.svg" alt="linkedin2">
+            <a href="https://www.linkedin.com/in/mariana-silva-paula/">Mariana Paula</a></p>
+        <p class="bord"><img src="/img/linkedin3.svg" alt="linkedin3">
+            <a href="https://www.linkedin.com/in/matheus-macedo-santos-2a8106194/">Matheus Santos</a></p>
+        <p class="bord down_space"><img src="/img/linkedin4.svg" alt="linkedin4">
+            <a href="https://www.linkedin.com/in/samuel-lucas-241a77210/">Samuel Lucas</a></p>
+        </div>
     </footer>
-    </section>
-
-
-
 </body>
 
 </html>
