--- a/index/index.html
+++ b/index/index.html
@@ -30,8 +30,8 @@
                     aquecimento global?</h1>
                 <p class="text">você sabe quais são os impactos que a mudança climática causam no cotidiano?
                     Ele pode ser </br> bem mais prejudicial do que a maioria das pessoas pensam!</p>
-                    <div class="video">
-                        <iframe width="840" height="472,5" class="video"  src="https://www.youtube.com/embed/S6Ycuv2lxFY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
+                    <div align="center">
+                        <iframe width="840" height="472,5" src="https://www.youtube.com/embed/S6Ycuv2lxFY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
                     </div>
             </section>
         <section class="settings_down">
