--- a/index/index.html
+++ b/index/index.html
@@ -28,7 +28,7 @@
             <div class>
                 <h1 class="title_principal">Por que devemos combater o <br>
                     aquecimento global?</h1>
-                <p class="text">você sabe quais são os impactos que a mudança climática causam no cotidiano?
+                <p class="text">Você sabe quais são os impactos que a mudança climática causam no cotidiano?
                     Ele pode ser </br> bem mais prejudicial do que a maioria das pessoas pensam!</p>
                     <div align="center">
                         <iframe width="840" height="472,5" src="https://www.youtube.com/embed/S6Ycuv2lxFY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
@@ -101,16 +101,6 @@
     <footer class="footer_down bg-dark">
         <div>
         <p class="title_footer"><img src="/img/logo.svg" alt="logoIntech"></p>
-        </div>
-        <div>
-        <p class="bord"><img src="/img/Linkedin1.svg" alt="linkedin1">
-             <a href="https://www.linkedin.com/in/emely-tavares-3575ba24a/">Emely Feitosa</a></p>
-        <p class="bord"><img src="/img/linkedin2.svg" alt="linkedin2">
-            <a href="https://www.linkedin.com/in/mariana-silva-paula/">Mariana Paula</a></p>
-        <p class="bord"><img src="/img/linkedin3.svg" alt="linkedin3">
-            <a href="https://www.linkedin.com/in/matheus-macedo-santos-2a8106194/">Matheus Santos</a></p>
-        <p class="bord down_space"><img src="/img/linkedin4.svg" alt="linkedin4">
-            <a href="https://www.linkedin.com/in/samuel-lucas-241a77210/">Samuel Lucas</a></p>
         </div>
     </footer>
 </body>
